DT-2757 Fixes tile background pattern overflow

--- a/src/client/components/molecules/bizguide-tile/bizguide-tile.scss
+++ b/src/client/components/molecules/bizguide-tile/bizguide-tile.scss
@@ -2,6 +2,7 @@
 
 .tile {
 	position: relative;
+	overflow: hidden;
 	@include grid-media($sba-grid-small){
 		@include grid-column(6, $sba-grid-small)
 		margin-top: 20px;
